assets/css/style.scss
---
---

@import "{{ site.theme }}";
@font-face {
	  font-family: carolingia;
	    src: url({{ site.baseurl }}/assets/font/carolingia.ttf);
    }
body {
	padding: 0px;
	margin: 90px 0 0 0;
  	color: #493c33;
  	background-color: black;
	background-size: 1080px;
	background-image: url("{{ site.baseurl }}/assets/img/book.png");
	background-attachment: fixed;
	background-repeat: no-repeat;
  	background-position: center 40px;
}
header {
	margin: 0px;
	padding: 0px;
	width: 400px;
	height: 460px;
	}
section {
	margin: 0px;
  	padding: 0px;
	width: 400px;
	height: 460px;
	}
section h1 {
      border-bottom: 2px solid black;
	text-align: right;
	}
.scrolltop {
	position: relative;
  	top: 150px;
	width: 500px;
	height: 127px;
	margin: 0px;
	padding: 0px;
	background-origin: content-box, padding-box;
	background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
  	background-position: center bottom;
    	background-size: 500px 127px;
      	background-repeat: no-repeat;
}
.scrollmid {
	border: 1px solid transparent;
  	position: relative;
	top: -40px;
	width: 500px;
	height: auto;
	margin: 0px;
	padding: 0px;
	background-origin: content-box, padding-box;
	background-image: url("{{ site.baseurl }}/assets/img/largescrollmiddle.png");
  	background-position: center;
    	background-size: 500px auto;
      	background-repeat: repeat-y;
}
.scrollbot {
	border: 1px solid transparent;
	position: relative;
	top: -2px;
	width: 500px;
	height: 143px;	
	margin: 0px;
	padding: 0px;
	background-origin: content-box, padding-box;
	background-image: url("{{ site.baseurl }}/assets/img/largescrollbottom.png");
  	background-position: center top;
    	background-size: 500px 143px;
      	background-repeat: no-repeat;
}
h1, h2, h3, h4, h5, h6 {
	color: #543E36;
	text-transform: capitalize;
	font-family: Carolingia, "Eagle Lake", "Brush Script MT", cursive;  
	margin: 20px;
    }
 p, ul, ol {
	color: #493C33;
	font-family: cursive;  
	margin: 20px;
}
.content {
	width: auto;
	height: 440px;
	margin: 20px;
	padding: 0px;
	-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
	mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
	overflow-y: scroll;
	}
.menu {
	width: auto;
	height: 440px;
	margin: 20px;
	padding: 0px;
	-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
	mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
	overflow-y: scroll;
	}
h4 menu {
	border-left: 4px solid #493c33;
	}
.indent {
	margin-left: 50px;
	}
.title {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 240px;
	}
.wrapper {
	margin-top: 0px;
	}
.box {
	margin: 5px 20px;
	opacity: 0.6;
	background: #e6e6e6;
	border: 4px solid #493c33;
 	border-radius: 25px;
}
.byline {
  	text-align: right; 
}
.entry {
	opacity: 0.6;
	border: 4px solid #493c33;
  	border-radius: 25px;
  	margin: 5px 20px;
  	background-color: #e6e6e6;
	}
.boilerplate {
	background: black;
	color: white;
	font-family: serif;
	margin: 0px 5px;
	padding: 0px;
  	font-size: x-small;
	}
.update {
	border-bottom: 4px solid #493c33;	
	float: right;}
footer {
	width: auto;
	float: inherit;
  	position: fixed;
	bottom: 0px;
  }
@media print, screen and (max-width: 480px) {
	body {
		background-size: 95%;
		background-image: url("{{ site.baseurl }}/assets/img/parchment.png");
		background-repeat: repeat-y;
	  	background-position: center;
		background-attachment: scroll;
		}
	header {
		position: relative;
		float: none;
		margin: 0px;
		padding: 0px;
		top: 0px;
		width: auto;
		height: auto;
		}
	section {
		position: relative;
		margin: 0px;
		float: none;
	  	padding: 0px;
		top: 0px;
		width: auto;
		height: auto;
		}
	.content {
		position: relative;
		width: auto;
		height: auto;
		top: auto;
		margin: 5px 20px;
		padding: 0px;
		-webkit-mask-image: none;
		mask-image: none;
		}
	.menu {
		position: relative;
		width: auto;
		height: auto;
		top: auto;
		margin: 5px 20px;
		padding: 0px;
		-webkit-mask-image: none;
		mask-image: none;
		}
	}

